--- a/css/style.css
+++ b/css/style.css
@@ -68,3 +68,9 @@ header{
 .main-text h3{
     text-align: center;
 }
+
+a{
+    text-decoration: underline;
+    font-size: 1rem;
+    color: black;
+}
